crates/server-less/tests/fixtures/invalid_http_arg.stderr
error: unknown argument `invalid_arg`
       Valid arguments: prefix, openapi, name, description, version, homepage, debug, trace
       Examples:
       - #[http(prefix = "/api/v1")]
       - #[http(openapi = false)]
       - #[http(name = "My API", description = "Does the thing")]
       - #[http(debug = true)]

       Related: #[serve] (multi-protocol), #[openapi] (standalone API docs), #[server] (blessed preset)
 --> tests/fixtures/invalid_http_arg.rs:5:8
  |
5 | #[http(invalid_arg = true)]
  |        ^^^^^^^^^^^
